# cdec-dtrain

./: Makefile.am
decoder/: ff_np.cc  ff_np.h
training/dtrain/: Makefile.am  collection.cc  collection.h  document.cc  document.h  dtrain.cc  dtrain.h  kbestget.h  ksampler.h  myheap.cc  myheap.h  pairsampling.h  retrieval.cc  retrieval.h  score.cc  score.h  test-retrieval.cc  viterbiget.h
utils/: filelib.h
